# basketball_statistics_telegram_bot

./: .dockerignore  .flake8  Dockerfile  app_version_updater.py  main.py  pyproject.toml  test_gig.py  test_main.py
.github/workflows/: .deploy.yml  deploy.yml  deploy_test.yml
common/domain/dto/: __init__.py  base.py  league_reader_input.py  statistics_presenter.py
common/exceptions/: base.py  parsers_exceptions.py  repo_exceptions.py
common/getaways/: file_saver.py  league_data_reader.py  league_reader.py
common/getaways/database/: base.py  session.py
common/getaways/database/repository/: base_repository.py  interfaces.py  mixin_repositories.py
common/presenters/: stats_preseneter.py
common/settings/: database.py  telegram.py
common/utils/: date_parser.py  formatters.py
project_docs/: Документация по API лиги ABL.md  Документация по API лиги ЛЧБ.md  Документация по API лиги МЛБЛ.md  О проекте.md
project_docs/.obsidian/: community-plugins.json  workspace.json
src/constants/: __init__.py  directories.py  fields.py  graphic_presenter.py  leagues_addresses.py  logs_templates.py  others.py  telegram_templates.py  templates.py
src/containers/: getaways.py  presenters.py  use_cases.py
src/controllers/telegram_bot/: states.py
src/controllers/telegram_bot/handlers/: __init__.py
src/controllers/telegram_bot/handlers/callbacks/: __init__.py  cancel.py  leagues_info.py  leagues_tutorials.py
src/controllers/telegram_bot/handlers/commands/: __init__.py  fast_statistics.py  fast_statistics_tutorial.py  help.py  info.py  start.py
src/controllers/telegram_bot/handlers/messages/: __init__.py  fast_statistics.py
src/controllers/telegram_bot/utils/: __init__.py  generate_keyboards.py  generate_photos_group.py  get_callback_query.py  init_handlers.py
src/domain/dto/: enums.py
src/domain/dto/base/: league.py
src/domain/dto/input/: player_profile.py
src/domain/dto/leagues_data/abl/: fast_statistics.py  reader_input.py
src/domain/dto/leagues_data/bcl/: fast_statistics.py  reader_input.py
src/domain/dto/leagues_data/mlbl/: fast_statistics.py  game.py  player_profile.py  reader_input.py  team.py
src/domain/dto/outputs/: fast_statistics.py
src/domain/dto/user_inputs/: league_urls.py
src/domain/use_cases/core_use_cases/: fast_statistics.py  leagues_service.py
src/domain/use_cases/parsers/: abl_parser.py  bcl_parser.py  factory.py  interface.py  mlbl_parser.py
src/getaways/: league_reader.py
src/getaways/leagu_data_readers/: mlbl_data_reader.py
src/presenters/: interfaces.py  leagues_info_presenter.py  matplotlib_graphic_presenter.py  matplotlib_graphics_presenter.py  plotly_graphics_presenter.py
src/settings/: app.py  telegram.py
