[tool.poetry]
name = "baskteball-statistics-telegram-bot"
version = "0.0.38"
description = "Telegram bot for parsing amateuer basketball leags (MLBL, ABL, BCL) and use it for analyzies"
authors = ["Nikita Veselenko <nikvesel@mail.ru>"]
#readme = "README.md"
packages = []

[tool.black]
line-length = 100

[tool.isort]
multi_line_output = 3
line_length = 100
include_trailing_comma = true


[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.2"
pydantic = "^2.10.1"
pydantic-settings = "^2.6.1"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
python-telegram-bot = "^21.7"
aiosqlite = "^0.20.0"
aenum = "^3.1.15"
pandas = "^2.2.3"
dependency-injector = "^4.44.0"
loguru = "^0.7.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
